2008-02-28  Ping Cheng <pingc@wacom.com>
	* Added support for Cintiq 20WSX
	* Fixed Bug 1875050 (Kovid Goyal)
	* Incorporated patch 1901778 (Steven Seed)

2008-02-23  Magnus Vigerlöf <Magnus.Vigerlof@ipbo.se>
	* The rescaling patch is now in X.org master database
	* Updated configure.in
	* Added 2.6.24 support
	* Updated kernel 2.4 make file

2008-01-22  Ping Cheng <pingc@wacom.com>
	* Updarted xsetwacom for Cintiq 12WX, Bamboo1, and BambooFun
	* Regrouped the routines for coming Xorg 7.3 hot-plug support (Magnus Vigerlöf)
	* refer to http://git.debian.org/?p=collab-maint/linux-wacom.git;a=summary for detailed changes
	* Label 0.7.9-7

2008-01-10  Ping Cheng <pingc@wacom.com>
	* Label 0.7.9-6

2008-01-02  Ping Cheng <pingc@wacom.com>
	* Updated build and configure scripts (Magnus Vigerlöf)
	* Support Xorg 7.3 with multimonitors
	* Unified screen, tablet, and cordinate initialization

2007-12-19  Ping Cheng <pingc@wacom.com>
	* Support multimonitor setup on 4 directions

2007-12-13  Ping Cheng <pingc@wacom.com>
	* Updated wacomcpl
	* Incorporated Xorg 7.3 workaround from Magnus Vigerlöf
	* Label 0.7.9-4

2007-11-28  Ping Cheng <pingc@wacom.com>
	* Clean support of outbound tracking for Bamboo, etc
	* Updated kernel 2.4.x code
	* Label 0.7.9-3

2007-11-28  Ping Cheng <pingc@wacom.com>
	* Updated TwinView support to eliminate the unnecessary tvoffset (bug 1812593)
	* Incorporated Bartosz Fabianowski's patch (bug 1831998)
	* Patch 1818295 from Alexander V. Inyukhin
	* Patch 1834712 from Magnus Vigerlöf 
	* Fixed bug 1791005 (protocol 4 tablets don't support serial numbers)
	* Patch 1839008 from Magnus Vigerlöf 

2007-11-12  Ping Cheng <pingc@wacom.com>
	* Support legacy kernels
	* Label 0.7.9-2

2007-11-08  Ping Cheng <pingc@wacom.com>
	* Added support for BambooFun, Bamboo1 and Hummingbird
	* Support multimonitors horizontally and vertically in the same configuration

2007-10-24  Ping Cheng <pingc@wacom.com>
	* Added support for 2.6.22